k3s/argocd/argocd_config.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitops
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-ingress
  namespace: gitops
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`argocd.internal.francesco-lombardo.it`)
    kind: Rule
    services:
    - name: argocd-server
      port: 80
  - kind: Rule
    match: Host(`argocd.internal.francesco-lombardo.it`) && Headers(`Content-Type`, `application/grpc`)
    priority: 11
    services:
    - name: argocd-server
      port: 80
      scheme: h2c
  tls:
    secretName: argocd-certificate
